--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>PROT-C APP</title>
+    <title>
+      GetProspect - Plataforma de recolha de preferências Grupo de Estudos em
+      Território e Inovação da Universidade de Aveiro
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
