--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      GetProspect - Plataforma de recolha de preferências Grupo de Estudos em
-      Território e Inovação da Universidade de Aveiro
+      GetProspect - Plataforma de recolha de preferências
     </title>
   </head>
   <body>
